<resources>
    <string name="app_name">Estudia</string>
    <string name="title_login">Ingreso</string>
    <string name="message_login">Bievenid@ a Estudia</string>
    <string name="email">Email</string>
    <string name="example_email">example@email.com</string>
    <string name="password">Contraseña</string>
    <string name="example_password">•••••••••••</string>
    <string name="login">ingresar</string>
    <string name="no_account_message">¿No tienes una cuenta aún?</string>
    <string name="signup"><u>Regístrate</u></string>
    <string name="rights">All rigths reserved - Estudia 2023</string>
    <string name="title_register">Registro</string>
    <string name="names_label">Nombres</string>
    <string name="name_placeholder">Ingresa tus nombres</string>
    <string name="last_name_label">Apellidos</string>
    <string name="last_name_placeholder">Ingresa tus apellidos</string>
    <string name="email_placeholder">Ingresa tu correo electrónico</string>
    <string name="password_placeholder">Ingresa tu contraseña</string>
    <string name="password_confirm">Confirma tu contraseña</string>
    <string name="password_confirm_placeholder">Escribe nuevamente tu contraseña</string>
    <string name="phone_label">Celular</string>
    <string name="phone_placeholder">Escribe tu número de celular</string>
    <string name="date_birth_label">Fecha de nacimiento</string>
    <string name="date_birth_placeholder">Selecciona tu fecha de nacimiento</string>
    <string name="social_stratum_label">Estrato</string>
    <string name="social_stratum_placeholder">Selecciona tu estrato</string>
    <string name="gender_label">Género</string>
    <string name="gender_placeholder">Selecciona tu género</string>
    <string name="signup_label_button">Regístrate</string>
    <string name="title_confirm">Confirma tu correo</string>
    <string name="subtitle_confirm">¡Ya casi terminas tu registro! Ingresa el código de confirmación que llegó a tu correo</string>
    <string name="code_confirm_placeholder">Código confirmación</string>
    <string name="confirm_label_button">Confirmar</string>
    <string name="back_button_label">Atrás</string>
    <string name="next_button_label">Siguiente</string>
    <string name="title_page_1">¡Somos Estudia!</string>
    <string name="title_page_2">Encuentra tu carrera</string>
    <string name="title_page_3">Estudia en la modalidad que desees</string>
    <string name="title_page_4">Y no olvides nuestra mascota</string>
    <string name="subtitle_page_1">La app que te ayudará a encontrar la carrera que deseas. Conoceremos un poco más de ti para ofertarte las carreras que el Sena tiene para ti</string>
    <string name="subtitle_page_2">Buscamos la mejor carrera que se acomode a tus intereses y que esté acorde a tus habilidades. Lo único que requerimos es de tu total honestidad en nuestro proceso.</string>
    <string name="subtitle_page_3">Queremos que encuentres la carrera que desees, acorde a tus preferencias</string>
    <string name="subtitle_page_4">No seríamos nada sin nuestros peludos, ellos hacen parte de Estudia y de ti</string>
    <string name="next_register_title">Queremos conocer más de ti</string>
    <string name="personality_survey_title">Test de Personalidad</string>
    <string name="personality_title">Tus Personalidades</string>
    <string name="programs_title">Programas Educativos</string>
    <string name="logout_title">Salir</string>
    <string name="race_question_1">¿Perteneces a algún grupo étnico o raizal?</string>
    <string name="race_question_2">¿A cuál grupo étnico perteneces?</string>
    <string name="disability_question_1">¿Posees alguna discapacidad o capacidad diferente?</string>
    <string name="disability_question_2">¿Cuál discapacidad posees?</string>
    <string name="work_question_1">¿Has trabajado en alguna ocupación antes?</string>
    <string name="work_question_2">¿En qué has trabajado?</string>
    <string name="work_question_3">¿Qué tipo de experticia lograste?</string>
    <string name="study_question_1">¿Cuál es tu nivel de estudios?</string>
    <string name="motivation_question_1">¿Cuál es tu motivación para estudiar?</string>
    <string name="motivation_placeholder">Ingresa una palabra</string>
    <string name="program_type_question">¿Qué tipo de programa del Sena deseas estudiar?</string>
    <string name="program_modality_question">¿Cuál es la modalidad de estudio que prefieres?</string>
    <string name="study_area_question">¿Cuál es tú área de estudio preferida?</string>
    <string name="city_question">¿En cuál ciudad deseas realizar tus estudios?</string>
    <string name="mobility_question">¿Tienes posibilidades de desplazarte a otra ciudad para estudiar?</string>
    <string name="time_availability_question">¿Cuál es tu disponibilidad horaria?</string>
    <string name="title_activity_customer_fragments">CustomerFragments</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_customer_register_container">CustomerRegisterContainer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_custom_preferences_page">Preferencias de estudio</string>
    <string name="description_custom_preferences_page">En esta pantalla encontrarás las
        preferencias de estudio que puedes tener en cuenta cuando empieces a estudiar.</string>
    <string name="description_two_custom_preferences_page"><b>¡Ordena la lista!</b> Para ello arrastra y suelta
        los <i>items</i> de la lista acorde al orden que le darías de lo más importante a lo menos importante
        que tendrías en cuenta.</string>
    <string name="description_three_custom_preferences_page">Cuando finalices de organizarlos da click en
        el botón "siguiente" de la parte inferior.</string>
    <string name="title_preferences_list">Listado de preferencias</string>
    <string name="subtitle_more_important">Más importante</string>
    <string name="subtitle_less_important">Menos importante</string>
    <string name="title_text_survey_page">Test</string>
    <string name="subtitle_text_survey_page">¡Bienvenid@ al test de personalidad!</string>
    <string name="paragraph_one_text_survey_page">
        Este test nos brindará la oportunidad de conocer las principales características
        de tu personalidad para determinar las <b>profesiones u ocupaciones</b> que
        ¡mejor te sean compatibles!
    </string>
    <string name="paragraph_two_text_survey_page">
        <b>No te tomará más de 5 minutos</b> en contestarlo. Está compuesto por <b>60 preguntas</b> y
        está basado en la prueba SDS - Búsqueda Autodirigida del psicologo John Holland.
    </string>
    <string name="paragraph_three_text_survey_page">
        Al finalizar el test, encontrarás las <b>personalidades que más sobresalen en ti,</b>
        una explicación y las posibles profesiones a las cuáles te puedes dedicar a futuro.
    </string>
    <string name="button_survey_intro_page">Iniciar</string>
    <string name="title_personality_survey_start">¡Vamos, Inicia!</string>
    <string name="button_survey_yes">Si</string>
    <string name="button_survey_no">No</string>
    <string name="personality_question_1">¿Te gustaría arreglar aparatos eléctricos?</string>
    <string name="personality_question_2">¿Te gustaría reparar automóviles?</string>
    <string name="personality_question_3">¿Te gustaría operar máquinas o equipos de motor?</string>
    <string name="personality_question_4">¿Te gustaría construir cosas con madera?</string>
    <string name="personality_question_5">¿Te gustaría trabajar al aire libre?</string>
    <string name="personality_question_6">¿Te gustaría leer libros o revistas científicas?</string>
    <string name="personality_question_7">¿Te gustaría trabajar en un laboratorio científico?</string>
    <string name="personality_question_8">¿Te gustaría estudiar una teoría científica?</string>
    <string name="personality_question_9">¿Te gustaría trabajar con productos químicos?</string>
    <string name="personality_question_10">¿Te gustaría aplicar matemáticas a problemas prácticos?</string>
    <string name="personality_question_11">¿Te gustaría trazar, dibujar o pintar?</string>
    <string name="personality_question_12">¿Te gustaría diseñar muebles, ropa o carteles?</string>
    <string name="personality_question_13">¿Te gustaría tocar algún instrumento musical?</string>
    <string name="personality_question_14">¿Te gustaría pintar retratos o tomar fotografías?</string>
    <string name="personality_question_15">¿Te gustaría escribir una novela o una obra de teatro?</string>
    <string name="personality_question_16">¿Te gustaría trabajar para una obra de caridad?</string>
    <string name="personality_question_17">¿Te gustaría ayudar a otros con sus problemas personales?</string>
    <string name="personality_question_18">¿Te gustaría tomar un curso sobre relaciones humanas?</string>
    <string name="personality_question_19">¿Te gustaría enseñar en una escuela?</string>
    <string name="personality_question_20">¿Te gustaría trabajar como voluntario?</string>
    <string name="personality_question_21">¿Te gustaría tener tu propio negocio?</string>
    <string name="personality_question_22">¿Te gustaría tomar un curso de administración o liderazgo?</string>
    <string name="personality_question_23">¿Te gustaría ser el director de un grupo?</string>
    <string name="personality_question_24">¿Te gustaría supervisar el trabajo de otros?</string>
    <string name="personality_question_25">¿Te gustaría participar en una campaña política?</string>
    <string name="personality_question_26">¿Te gustaría trabajar en una oficina?</string>
    <string name="personality_question_27">¿Te gustaría tomar un curso de contabilidad?</string>
    <string name="personality_question_28">¿Te gustaría llevar un inventario?</string>
    <string name="personality_question_29">¿Te gustaría llenar formularios o declaraciones de impuestos?</string>
    <string name="personality_question_30">¿Te gustaría utilizar equipos de oficina?</string>
    <string name="personality_question_31">¿Puedes hacer un dibujo a escala?</string>
    <string name="personality_question_32">¿Puedes cambiar el aceite o la llanta de un auto?</string>
    <string name="personality_question_33">¿Puedes reparar muebles?</string>
    <string name="personality_question_34">¿Puedes hacer reparaciones de plomería sencillas?</string>
    <string name="personality_question_35">¿Puedes pintar paredes de una casa?</string>
    <string name="personality_question_36">¿Puedes interpretar fórmulas químicas?</string>
    <string name="personality_question_37">¿Puedes escribir un informe científico?</string>
    <string name="personality_question_38">¿Puedes describir la función de los glóbulos blancos?</string>
    <string name="personality_question_39">¿Puedes usar el álgebra para resolver problemas matemáticos?</string>
    <string name="personality_question_40">¿Puedes realizar un experimento científico?</string>
    <string name="personality_question_41">¿Puedes arreglar o componer música?</string>
    <string name="personality_question_42">¿Puedes pintar, usar acuarelas o hacer esculturas?</string>
    <string name="personality_question_43">¿Puedes cantar?</string>
    <string name="personality_question_44">¿Puedes tocar un instrumento musical?</string>
    <string name="personality_question_45">¿Eres bueno escribiendo cuentos o poesía?</string>
    <string name="study_programs_screen_title">¿Qué podrías estudiar?</string>
    <string name="study_programs_screen_second_title">Programas Educativos</string>
    <string name="study_programs_first_subtitle">Programas más apropiados para ti</string>
    <string name="study_programs_second_subtitle">Otros programas para ti</string>
</resources>