<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.StudyPrograms">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:gravity="bottom"
        android:background="@color/mustard_500">

        <TextView
            style="@style/TitlePageTextView"
            android:textSize="35sp"
            android:layout_marginBottom="12dp"
            android:text="@string/study_programs_screen_title" />
    </LinearLayout>

    <TextView
        style="@style/TitleSimpleTextView"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/study_programs_screen_second_title" />

    <TextView
        style="@style/SubtitleSimpleTextView"
        android:text="@string/study_programs_first_subtitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerHorizontalSuggestedPrograms"
        android:scrollbars="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/SubtitleSimpleTextView"
        android:text="@string/study_programs_second_subtitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerVerticalSuggestedPrograms"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp" />

</LinearLayout>