<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Confirm"
    style="@style/ConstraintLayoutBase">

    <LinearLayout
        tools:ignore="MissingConstraints"
        style="@style/LinearLayoutBase">

        <ScrollView
            android:id="@+id/scrollViewConfirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/WightHeightBase">

            <LinearLayout style="@style/LinearLayoutAlignItems">

                <TextView
                    android:id="@+id/textRegister"
                    android:text="@string/title_confirm"
                    android:textAlignment="center"
                    android:layout_marginTop="200sp"
                    style="@style/TitleTextView" />

                <TextView
                    android:id="@+id/textNameRegister"
                    android:text="@string/subtitle_confirm"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    style="@style/TitleMediumTextView" />

                <LinearLayout
                    android:id="@+id/linearLayoutCodeConfirm"
                    android:layout_marginTop="20sp"
                    style="@style/LinearLayoutTextEdit">

                    <com.google.android.material.textfield.TextInputLayout
                        app:boxStrokeColor="@color/white_500"
                        app:boxStrokeWidth="1dp"
                        app:placeholderTextColor="@color/grey_coal_300"
                        app:boxStrokeWidthFocused="1dp"
                        style="@style/WightHeightWrap">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/codeConfirm"
                            android:hint="@string/code_confirm_placeholder"
                            android:textAlignment="center"
                            android:inputType="textCapWords"
                            style="@style/TextInputEditStyle" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/confirmButton"
                    android:text="@string/confirm_label_button"
                    android:layout_marginBottom="50dp"
                    style="@style/PrincipalButtonStyle" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>